unpackaged/main/default/objects/ETT_Staging_Contacts__c/ETT_Staging_Contacts__c.object-meta.xml
<CustomObject>
    <label>Staging Contacts</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>