unpackaged/main/default/objects/ETT_Staging_Contacts__c/fields/ETT_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>