unpackaged/main/default/objects/ETT_Staging_Contacts__c/fields/ETT_Phone__c.field-meta.xml
<CustomField>
    <fullName>ETT_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>